# otus_h4_print_ip

./: .travis.yml  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeLists.txt  Doxyfile  README.md  README_8md.html  dir_000005_000004.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_169a221bed9a62dfab39a0778e900a2f.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.map  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_fa19baa19c567821586e8dd4bc5b533f.html  dir_fa5672360010c0da74e6313272d3c7de.html  feature__tests_8c.html  feature__tests_8cxx.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  gtest_8cpp.html  gtest_8cpp__incl.map  gtest_8cpp__incl.md5  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  md_README.html  pages.html  print_ip.h  printip_8cpp.html  printip_8cpp__incl.map  printip_8cpp__incl.md5  printip_8h.html  printip_8h__dep__incl.map  printip_8h__dep__incl.md5  (+3 more)
search/: all_1.js  all_9.js  files_4.js  functions_1.js  functions_2.js  pages_0.js  searchdata.js
src/: main.cpp  printip.cpp  printip.h
tests/: gtest.cpp
